@@ -24,6 +24,7 @@
 - Bugfix: collider minimum occlusion time and smoothing time interaction
 - Bugfix: TargetGroup.RemoveMember error (fogbugz 1119028)
 - Bugfix: TargetGroup member lerping jerk when member weight near 0
+- Bugfix: Transposer angular damping should be 0 only if binding mode not LockToTarget
 
 
 <size=20><b>Version 2.2.8</b></size>
